# discord-google-cloud-engine-bot

./: .gitignore  Cargo.toml  README.md
package/: .gitignore  PKGBUILD  env.sh  gce_key.json  systemd.service
src/: main.rs
