[package]
name = "discord-google-cloud-engine-bot"
version = "0.1.0"
authors = ["Alejandro Valdes <alejandrovaldes@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.7"
hyper-rustls = "0.22.1"
yup-oauth2 = "5.1.0"
google-compute1 = "2.0.4"
serenity = "0.10.5"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
